--- a/Comps II/Comps II.tex
+++ b/Comps II/Comps II.tex
@@ -101,8 +101,8 @@ Statistical physics has had great success in explaining the emergence of macrosc
 
 \begin{figure}      
   \begin{center}    
- \includegraphics[width=1\textwidth]{Isingchialvo}    
-    \caption{\textbf{2D Ising model.} Snapshots of spin configurations demonstrating a continuous phase transition. In the subcritical and supercritical states homogenous order and disorder reign, respectively. At the critical temperature fluctuations occur on all length scales due to highly correlated sections. \cite{Chialvo2010a}}   
+ \includegraphics[width=1.1\textwidth]{Isingchialvo}    
+    \caption{\textbf{2D Ising model.} Snapshots of spin configurations demonstrating a continuous phase transition. White pixels correspond to spin up (+1), while black is spin down (-1). In the subcritical and supercritical states homogenous order and disorder reign, respectively. At the critical temperature fluctuations occur on all length scales due to highly correlated sections. \cite{Chialvo2010a}}   
    \label{Figure::Ising model criticality}   
   \end{center}     
    \end{figure}
@@ -134,7 +134,7 @@ Branching processes were originally studied in the context of the survival of ar
 
 \begin{figure}      
   \begin{center}    
- \includegraphics[width=.55\textwidth]{Branchingprocesschialvo}    
+ \includegraphics[width=.7\textwidth]{Branchingprocesschialvo}    
     \caption{\textbf{Branching processes.} Subcritical branching processes quickly die out, while the system is saturated in the supercritical regime. Only in the critical state with $\sigma = 1$ is the input activity maintained, on average. At criticality, the system is sensitive to both small and large pertubations, thus maximizing its dynamic range. \cite{Chialvo2006a}}   
    \label{Figure::Critical Branching Process}   
   \end{center}     
@@ -156,21 +156,21 @@ Motivated by the work done in modeling complex systems such as earthquakes and f
    
 \begin{figure}      
   \begin{center}    
- \includegraphics[width=.70\textwidth]{avalanchesplenzbook}    
+ \includegraphics[width=.9\textwidth]{avalanchesplenzbook}    
     \caption{\textbf{Comparison of neuronal avalanches in several systems.} (a) Neuronal avalanches in cortex slice \textit{in vitro}. (b) Neuronal avalanches in rat \textit{in vivo}. (c) Neuronal avalanches in awake macaque monkey. Cutoff corresponds to area of array i.e. number of electrodes. (d) Neuronal avalanches in the resting MEG of he human brain. Sensor array size noted in inset and by grayscale and numbers on plot. \cite{Plenz2014}}
    \label{Figure::Neuronal avalanches in vitro and in vivo}   
   \end{center}     
    \end{figure}
 
-Experimental evidence points towards networks of neurons operating in a critical regime characterized by power laws, but simply observing a trend in data that follows a power law does not establish the presence of critical phenomena. Crucially, if the critical brain story is to be legitimized there must be a reason, a functional purpose for this supposed phenomena.   
+Experimental evidence points towards networks of neurons operating in a critical regime characterized by power laws, but simply observing a trend in data that follows a power law does not establish the presence of critical phenomena. Some physical parameters must be shown to pass through a singularity, and the generative mechanism of the phenomena should be theoretically described. In addition, the use of the concept of criticality ought to be applied only if it yields some insight. Crucially, if the critical brain story is to be legitimized there must be a reason, a functional purpose for this supposed phenomena.   
       
 \section*{Putting it all together}
 
-The brain is an information processor. Over millennia it has evolved to its current state as one of the most complicated and poorly understood systems known. Any theory purported to describe neuronal networks should account for what we know about the information processing capabilities of the brain. Here is where the theory of criticality in networks provides something novel. Through both theoretical models and experimental findings, it has been shown that networks of neurons (indeed, any kind of complex network comprised of similar elements) achieve maximal information processing and dynamic range at criticality. The significance of these findings is that there is a functional benefit to maintaining a critical state in the brain.
+The brain is an information processor. Over millennia it has evolved to its current state as one of the most complicated and poorly understood systems known. Any theory purported to describe neuronal networks should account for what we know about the information processing capabilities of the brain. Here is where the theory of criticality in networks provides something novel. Through both theoretical models and experimental findings, it has been shown that networks of neurons (indeed, any kind of complex network comprised of similar elements) achieve maximal information capacity and dynamic range at criticality. The significance of these findings is that there is a functional benefit to maintaining a critical state in the brain.
 
 \begin{figure}      
   \begin{center}    
- \includegraphics[width=.65\textwidth]{dynamicrangetheorycopelli}    
+ \includegraphics[width=.8\textwidth]{dynamicrangetheorycopelli}    
     \caption{\textbf{Response curves and dynamic range.} \textbf{(a)} Average activity F versus stimulus rate r with branching parameters from $\sigma = 0$ to 2 in intervals of .2. Represented as a log-log plot. \textbf{(b)} Lin-log plot of \textbf{(a)}. \textbf{(c)} Response curve for $\sigma = 1.2$ with dynamic range $\Delta$ from $10\%$ to $90\%$ of saturated response. \textbf{(d)} Dynamic range versus branching ratio. Optimization occurs at the critical point $\sigma = 1$.\cite{Kinouchi2006b}}   
    \label{Figure::Dynamic Range Theory}   
   \end{center}     
@@ -180,7 +180,7 @@ The brain is an information processor. Over millennia it has evolved to its curr
 The intensity of human-detectable physical stimuli, such as light and sound, varies by several orders of magnitude. For hearing the dynamic range is on the order of 140dB, for sight it's 90dB. This very large dynamic range must be accounted for in the model. Since single neurons respond in a linear, saturating way with a limited range, the broad dynamic range must be a collective phenomena. Kinouchi and Copelli found that a network of excitable elements, such as a neuronal network, has its dynamic range and sensitivity maximized at its critical point during a non-equilibrium phase transition\cite{Kinouchi2006b}. This is consistent with and lends further credence to the brain operating at criticality. Figure 6 shows the results of the simulations. The dynamic range is calculated from the $10\%-90\%$ response interval and is seen to be maximized at the critical branching ratio. In the subcritical regime, the dynamic range increases with the branching ratio. In the supercritical regime, the dynamic range decreases with the branching ratio. \cite{Larremore2011a, Larremore2012a}
 
 \paragraph{Experiment}
-The ability of a neuronal network to process information is determined by the neural activity it produces. Activity patters in cortex cultures, anesthetized rats, and awake monkeys were measured to quantify their dynamic range (Figure 7) and information capacity (Figure 8). Experiment has demonstrated that networks generating neuronal avalanches benefit from maximized dynamic range\cite{Shew2009b}. By measuring the responses to a range of stimuli amplitudes, the dynamic range was computed by way of the same response interval as in the theoretical approach.
+The ability of a neuronal network to process information is determined by the neural activity it produces. Activity patterns in cortex cultures, anesthetized rats, and awake monkeys were measured to quantify their dynamic range (Figure 7) and information capacity (Figure 8). Experiment has demonstrated that networks generating neuronal avalanches benefit from maximized dynamic range\cite{Shew2009b}. By measuring the responses to a range of stimuli amplitudes, the dynamic range was computed by way of the same response interval as in the theoretical approach.
 
 \begin{figure}      
   \begin{center}    
@@ -193,7 +193,7 @@ The ability of a neuronal network to process information is determined by the ne
 \begin{figure}      
   \begin{center}    
  \includegraphics[width=.40\textwidth]{entropyplenz}    
-    \caption{\textbf{Information capacity.} Experimental data taken with same drug-color scheme as previous figure. Entropy and thus information is maximized around $\kappa = 1$. \cite{Shew2011a}}   
+    \caption{\textbf{Information capacity.} Experimental data taken with same drug-color scheme as previous figure. Information entropy is maximized around $\kappa = 1$. \cite{Shew2011a}}   
    \label{Figure::Entropy / information maximized experimental}   
   \end{center}     
    \end{figure}
@@ -206,10 +206,10 @@ H = - \sum^{n}_{i=1}p_{i}\log_{2}p_{i},
 
 \noindent where n is the number of binary patterns and $ p_{i} $ is the probability that a particular pattern $i$ occurs, was calculated to quantify the information capacity. The agreement between experimental findings and theoretical models supports the theory of neuronal networks operating at criticality and suggests that in networks with balanced excitation and inhibition maximal information processing capabilities arise as a result of criticality. 
 
-To summarize these experimental and theoretical findings, neuronal avalanches with power law distributions in size and duration were observed and found to maximize neuronal information processing in the form of dynamic range and information capacity (entropy). These findings are consistent with the theory that neuronal networks operate at criticality. 
+To summarize these experimental and theoretical findings, neuronal avalanches with power law distributions in size and duration were observed and found to maximize neuronal information processing in the form of dynamic range and information capacity (information entropy). These findings are consistent with the theory that neuronal networks operate at criticality. 
 
 \paragraph{The Ising Model}
-Additional work has been done in the field in an attempt to further bridge the gap between statistical physics and neuroscience. In particular, analogies have been drawn between Ising model dynamics and brain dynamics \cite{Fraiman2009a}. By transforming brain fMRI data and a 2D Ising model simulation into correlation networks, the two may be appropriately compared. A correlation network is here defined by linking sites with the strongest correlations. Correlations between lattice sites in the Ising model as well as sites from recorded brain data are computed, with links between sites defined whenever the correlation is greater than or equal to a given threshold. By setting this threshold, the average degree of the network may be regulated. The degree of a network node is the number of connections the node has to other nodes. So, the degree distribution is the probability distribution of all the degrees of the nodes in the network. The degree distributions at particular average degrees for both the Ising model at criticality and brain FMRI data display remarkable similarity (see Figure 9). The indistinguishability of a refined feature of network structure such as degree distribution between the Ising model at its critical temperature and the brain indicates that despite the simplicity of the Ising model and its complete lack of any neural details the macroscopic, phenomenological behavior of the brain can still be replicated. This finding lends support to the idea that the brain operates in a critical regime where its microscopic details aren't relevant to the emergent macroscopic behavior and network dynamics.
+Additional work has been done in the field in an attempt to further bridge the gap between statistical physics and neuroscience. In particular, analogies have been drawn between Ising model dynamics and brain dynamics \cite{Fraiman2009a}. By transforming brain fMRI data and a 2D Ising model simulation into correlation networks, the two may be appropriately compared. A correlation network is here defined by linking sites with the strongest correlations. Correlations between lattice sites in the Ising model as well as sites from recorded brain data are computed, with links between sites defined whenever the correlation is greater than or equal to a given threshold. By setting this threshold, the average degree of the network may be regulated. The degree of a network node is the number of connections the node has to other nodes. So, the degree distribution is the probability distribution of all the degrees of the nodes in the network. The degree distributions at particular average degrees for both the Ising model at criticality and brain FMRI data display remarkable similarity (see Figure 9). The indistinguishability of a refined feature of network structure such as degree distribution between the Ising model at its critical temperature and the brain indicates that despite the simplicity of the Ising model and its complete lack of any neural details, the macroscopic, phenomenological behavior of the brain can still be replicated. This finding lends support to the idea that the brain operates in a critical regime where its microscopic details aren't relevant to the emergent macroscopic behavior and network dynamics.
 
 \begin{figure}      
   \begin{center}    
