--- a/Comps II/Comps II.tex
+++ b/Comps II/Comps II.tex
@@ -85,7 +85,7 @@
 
 \section*{Introduction}
 
-The human brain is amazingly complex. Comprised of tens of billions of neurons with a hundred trillion connecting synapses, it's no wonder it remains so poorly understood. From this immensely complex network of interacting elements arise collective dynamics, which neuroscience research has only recently turned its focus to. However, the study of collective phenomena is well known to physics. Statistical mechanics uses probability theory to ascertain the collective behavior of systems made up of very large numbers of constituents, thereby connecting the microscopic to the macroscopic. The field of statistical mechanics has had great success in explaining not only the microscopic basis of thermodynamics, but also the emergence of macroscopic dynamics in complex systems outside the typical purview of physics. With this interdisciplinary mindset, some theorized the brain could operate in a regime characterized by statistical mechanics as a continuous phase transition\cite{Bak1987a}. Little credence was given to such theories until the publication of the first experimental evidence that neuronal networks exhibit avalanches reminiscent of a system operating at criticality \cite{Beggs2003b}.
+The human brain is amazingly complex. Comprised of tens of billions of neurons with a hundred trillion connecting synapses, it is no wonder it remains so poorly understood. From this immensely complex network of interacting elements arise collective dynamics, which neuroscience has only recently turned its focus to. However, the study of collective phenomena is well known to physics. Statistical mechanics uses probability theory to ascertain the collective behavior of systems made up of very large numbers of constituents, thereby connecting the microscopic to the macroscopic. The field of statistical mechanics has had great success in explaining not only the microscopic basis of thermodynamics, but also the emergence of macroscopic dynamics in complex systems outside the typical purview of physics. With this interdisciplinary mindset, some theorized the brain could operate in a regime characterized by statistical mechanics as a continuous phase transition\cite{Bak1987a}. Little credence was given to such theories until the publication of the first experimental evidence that neuronal networks exhibit avalanches reminiscent of a system operating at criticality \cite{Beggs2003b}.
 
 In this paper I will discuss recent work in the emerging subfield of criticality in neural systems. Work in this field combines experimental neuroscience, nonlinear dynamics, complex systems, and graph theory in the context of statistical physics. To understand the human brain, and thus our behavior and cognition, necessitates the elucidation of the patterns of spatiotemporal brain activity that arise out of collective neural dynamics. To this end, the tools of statistical mechanics, and in particular those dealing with critical phenomena, may be of great use.
 
@@ -93,9 +93,9 @@ In this paper I will discuss recent work in the emerging subfield of criticality
 
 Understanding the underlying mechanism by which the brain adaptively produces a broad range of behaviors is a fundamental problem in neuroscience. Indeed, the mechanism responsible for the emergence of behavior from simple excitable elements (neurons) interacting via electrochemical impulses is of ultimate importance in understanding intelligent life. Naturally, a subject of such fundamental interest and great complexity, but which can nonetheless be modeled simply, attracts physicists. 
 
-Of course, mere interest does not suffice. Does physics really have something to contribute to the field of neuroscience in the context of neuronal networks? In the course of this paper, I will argue yes it does. The facts that networks of excitable elements operating at criticality benefit from maximal dynamic range \cite{Kinouchi2006b,Shew2009b} and information capacity\cite{Shew2011a} show that a statistical mechanical approach to understanding neuronal networks, and thus the brain, has real functional yield.
+Of course, mere interest does not suffice. Does physics really have something to contribute to the field of neuroscience in the context of neuronal networks? In the course of this paper, I will argue that it does. The facts that networks of excitable elements operating at criticality benefit from maximal dynamic range \cite{Kinouchi2006b,Shew2009b} and information capacity\cite{Shew2011a} show that a statistical mechanical approach to understanding neuronal networks, and thus the brain, has real functional yield.
 
-\section*{Physics of Phase Transitions and Critical Phenomena}
+\section*{Physics of phase transitions and critical phenomena}
 
 Statistical physics has had great success in explaining the emergence of macroscopic thermodynamic behavior from the underlying microscopic, atomic interactions. An emergent phenomena is a macroscopic one that can be explained simply, though it arises out of complicated microscopic interactions. Many interdisciplinary fields have attempted to make use of statistical mechanics to explain phenomena arising out of complicated dynamics. Continuous phase transitions are interesting because they exhibit a qualitative change in macroscopic behavior as a certain physical property continuously changes. A physical property that undergoes such a change and allows for distinguishing distinct phases is known as an order parameter. The critical point in a continuous phase transition is the point at which certain physical properties of the system in question are singular and the system itself is in some sense teetering between two phases, between two qualitatively different states such as order and disorder. For example, as its temperature is increased a magnet may undergo a second order phase transition from ferromagnet to paramagnetic. As the system approaches a critical temperature, known as the Curie temperature, the magnetization vanishes continuously. At the critical temperature, the magnetization fluctuates wildly corresponding to neither an ordered ferromagnetic nor disordered paramagnetic state. Two main features of continuous phase transitions are scale-invariance and universality. That a phase transition is scale-invariant means fluctuations occur at all length scales, and so such systems are statistically invariant under changes in length scale. Universality signifies a lack of dependence on microscopic properties near the critical point. As a result, widely different microscopic systems can display the same macroscopic behavior at a phase transition. The same scale-invariant theory can be used to describe many different systems. Properties such as susceptibility, specific heat, and correlation lengths have power law singularities at the critical point. The critical exponents corresponding to these power laws  may be shared between seemingly disparate systems such as ferromagnets and liquid-gas systems, which as a result may both be modeled by the Ising model. The Ising model is a mathematical model consisting of interacting spins on lattice. This spins take values of +1 or -1 and are coupled together through an interaction strength parameter. The 2D Ising model is one of the simplest models demonstrating a phase transition, illustrated in Figure 1. \cite{Sethna2011a}
 
@@ -111,7 +111,7 @@ Statistical physics has had great success in explaining the emergence of macrosc
 
 \paragraph*{Critical phenomena applied}
 
-A number of physical systems are characterized by a wide range of event sizes that often are triggered in impulsive avalanches of activity, where the number of avalanches of a size s follows a power law $ D(s) \sim s^{-\tau} $ over several orders of magnitude. At criticality, these avalanches span the size of the system. This power law behavior results in a distinctive probability distribution in size. Such systems may be studied as critical points with the same tools as those in the study of continuous phase transitions. Earthquakes are an example of one such phenomena\cite{Sethna2011a}. An earthquake is caused by the grinding of two sides of a fault in a stick-slip type motion. The faults remain stuck for small applied stresses, and with strong stresses the faults simply slide by each other, as illustrated by figure 2. However, at the transition between these two qualitatively different behaviors is a critical regime where earthquakes of all sizes are seen.  
+A number of physical systems are characterized by a wide range of event sizes that often are triggered in impulsive avalanches of activity, where the number of avalanches of a size $s$ follows a power law $ D(s) \sim s^{-\tau} $ over several orders of magnitude. At criticality, these avalanches span the size of the system. This power law behavior results in a distinctive probability distribution in size. Such systems may be studied as critical points with the same tools as those in the study of continuous phase transitions. Earthquakes are an example of one such phenomena\cite{Sethna2011a}. An earthquake is caused by the grinding of two sides of a fault in a stick-slip type motion. The faults remain stuck for small applied stresses, and with strong stresses the faults simply slide by each other, as illustrated by Figure 2. However, at the transition between these two qualitatively different behaviors is a critical regime where earthquakes of all sizes are seen.  
 
 \begin{figure}      
   \begin{center}    
@@ -123,13 +123,13 @@ A number of physical systems are characterized by a wide range of event sizes th
 
 \paragraph{Self-organized criticality}
 
-The critical point in a system typically may only be reached by fine tuning the system's parameters. An interesting exception to this is a dynamical system whose critical point acts as an attractor. In such a system, no fine tuning is necessary and despite starting far from equilibrium the critical regime may be reached. Bak's sandpile model\cite{Bak1987a} was the first example of a dynamical system displaying such self-organized criticality. Grains of sand are gradually and randomly added to a pile. As the pile of sand grows, if the slope becomes too large the pile will collapse via avalanche. The cycle of growth and collapse continues until the slope reaches a point wherein the pile is barely stable to small perturbations. Dropping another grain of sand may trigger a catastrophic avalanche, or perhaps nothing at all. That is, there is no characteristic length scale at this point. Apparently this system is attracted to its critical point with no tuning of a system parameter - unlike more typical examples of critical phenomena. The sandpile model demonstrates avalanches that follow power law behavior for both the distribution of event sizes and durations over many orders of magnitude, and it does so without the fine tuning of any particular parameter. Such a system is said to exhibit self-organized criticality. It turns out the previously described earthquake model also is self-organized(figure 2): a small velocity applied by continental drift naturally sets the appropriate external force to drive critical fluctuations\cite{Sethna2011a}.
+The critical point in a system typically may only be reached by fine tuning the system's parameters. An interesting exception to this is a dynamical system whose critical point acts as an attractor. In such a system, no fine tuning is necessary and despite starting far from equilibrium the critical regime may be reached. Bak's sandpile model\cite{Bak1987a} was the first example of a dynamical system displaying such self-organized criticality. Grains of sand are gradually and randomly added to a pile. As the pile of sand grows, if the slope becomes too large the pile will collapse via avalanche. The cycle of growth and collapse continues until the slope reaches a point wherein the pile is barely stable to small perturbations. Dropping another grain of sand may trigger a catastrophic avalanche, or perhaps nothing at all. That is, there is no characteristic length scale at this point. Apparently this system is attracted to its critical point with no tuning of a system parameter - unlike more typical examples of critical phenomena. The sandpile model demonstrates avalanches that follow power law behavior for both the distribution of event sizes and durations over many orders of magnitude, and it does so without the fine tuning of any particular parameter. Such a system is said to exhibit self-organized criticality. It turns out the previously described earthquake model also is self-organized(Figure 2): a small velocity applied by continental drift naturally sets the appropriate external force to drive critical fluctuations\cite{Sethna2011a}.
 
 \section*{Networks and Graph Theory}
 
 Networks, individuals and the complicated interconnections between them, are described mathematically by graphs. In graph theory, the network's topology is represented as a collection of nodes with links that connect them. An adjacency matrix is used to represent a graph in more explicit mathematical form. Each row and column represents a node, and the elements of the matrix correspond to either 1 for a link or 0 for no link between the ith and jth node.
 
-Branching processes were originally studied in the context of the survival of aristocratic family names in the Victorian era. Galton and Watson modeled the passing on of family names with an active (or excited) node branching to other nodes (father to sons) which in turn are active with some probability \cite{Watson2014}. The threshold for the longevity of a family name is met when the average number of active nodes from generation to generation is unchanged. Should the average number of active nodes increase (decrease), the process is dubbed supercritical (subcritical). In the subcritical case the family name dies out. Figure 3 illustrates branching processes in these three regimes. More recently, such branching processes have been used to model the propagation of disease, for example. The propagation of excitations in a branching process behaves as the avalanches previously described. In the case of a critical branching process, the sum of the probabilities of the nodes excited from one generation to the next is equal to one. This sum is known as the branching ratio. In this critical regime, both the size (s) and duration (t) of the avalanches follow power laws $ D(s) \sim s^{-3/2} $ and $ D(t) \sim t^{-2} $, respectively. \cite{Larremore2014}
+Branching processes were originally studied in the context of the survival of aristocratic family names in the Victorian era. Galton and Watson modeled the passing on of family names with an active (or excited) node branching to other nodes (father to sons) which in turn are active with some probability \cite{Watson2014}. The threshold for the longevity of a family name is met when the average number of active nodes from generation to generation is unchanged. Should the average number of active nodes increase (decrease), the process is dubbed supercritical (subcritical). In the subcritical case the family name dies out. Figure 3 illustrates branching processes in these three regimes. More recently, such branching processes have been used to model the propagation of disease, for example. The propagation of excitations in a branching process behaves as the avalanches previously described. In the case of a critical branching process, the sum of the probabilities of the nodes excited from one generation to the next is equal to one. This sum is known as the branching ratio. In this critical regime, both the size $s$ and duration $t$ of the avalanches follow power laws $ D(s) \sim s^{-3/2} $ and $ D(t) \sim t^{-2} $, respectively. \cite{Larremore2014}
 
 \begin{figure}      
   \begin{center}    
@@ -176,10 +176,10 @@ The brain is an information processor. Over millennia it has evolved to its curr
    \end{figure}
    
 \paragraph{Theory}
-The intensity of human-detectable physical stimuli, such as light and sound, varies by several orders of magnitude. For hearing the dynamic range is on the order of 140dB, for sight it is 90dB. This very large dynamic range must be accounted for in the model. Since single neurons respond in a linear, saturating way with a limited range, the broad dynamic range must be a collective phenomena. Kinouchi and Copelli found that a network of excitable elements, such as a neuronal network, has its dynamic range and sensitivity maximized at its critical point during a non-equilibrium phase transition\cite{Kinouchi2006b}. This is consistent with and lends further credence to the brain operating at criticality. Figure 6 shows the results of the simulations. The dynamic range is calculated from the $10\%-90\%$ response interval and is seen to be maximized at the critical branching ratio. In the subcritical regime, the dynamic range increases with the branching ratio. In the supercritical regime, the dynamic range decreases with the branching ratio. \cite{Larremore2011a, Larremore2012a}
+The intensity of human-detectable physical stimuli, such as light and sound, varies by several orders of magnitude. For hearing the dynamic range is on the order of 140 dB, for sight it is 90 dB. This very large dynamic range must be accounted for in the model. Since single neurons respond in a linear, saturating way with a limited range, the broad dynamic range must be a collective phenomena. Kinouchi and Copelli found that a network of excitable elements, such as a neuronal network, has its dynamic range and sensitivity maximized at its critical point during a non-equilibrium phase transition\cite{Kinouchi2006b}. This is consistent with and lends further credence to the brain operating at criticality. Figure 6 shows the results of the simulations. The dynamic range is calculated from the $10\%-90\%$ response interval and is seen to be maximized at the critical branching ratio. In the subcritical regime, the dynamic range increases with the branching ratio. In the supercritical regime, the dynamic range decreases with the branching ratio. \cite{Larremore2011a, Larremore2012a}
 
 \paragraph{Experiment}
-The ability of a neuronal network to process information is determined by the neural activity it produces. Activity patterns in cortex cultures, anesthetized rats, and awake monkeys were measured to quantify their dynamic range (Figure 7) and information capacity (Figure 8). Experiment has demonstrated that networks generating neuronal avalanches benefit from maximized dynamic range\cite{Shew2009b}. By measuring the responses to a range of stimuli amplitudes, the dynamic range was computed by way of the same response interval as in the theoretical approach.
+The ability of a neuronal network to process information is determined by the neural activity it produces. Activity patterns in cortex cultures, anesthetized rats, and awake monkeys were measured to quantify their dynamic range (Figure 7) and information capacity (Figure 8). Experiments have demonstrated that networks generating neuronal avalanches benefit from maximized dynamic range\cite{Shew2009b}. By measuring the responses to a range of stimuli amplitudes, the dynamic range was computed by way of the same response interval as in the theoretical approach.
 
 \begin{figure}      
   \begin{center}    
@@ -208,12 +208,12 @@ H = - \sum^{n}_{i=1}p_{i}\log_{2}p_{i},
 To summarize these experimental and theoretical findings, neuronal avalanches with power law distributions in size and duration were observed and found to maximize neuronal information processing in the form of dynamic range and information capacity (information entropy). These findings are consistent with the theory that neuronal networks operate at criticality. 
 
 \paragraph{The Ising Model}
-Additional work has been done in the field in an attempt to further bridge the gap between statistical physics and neuroscience. In particular, analogies have been drawn between Ising model dynamics and brain dynamics \cite{Fraiman2009a}. By transforming brain functional magnetic resonance imaging (fMRI) data and a 2D Ising model simulation into correlation networks, the two may be appropriately compared. A correlation network is here defined by linking sites with the strongest correlations. Correlations between lattice sites in the Ising model as well as sites from recorded brain data are computed, with links between sites defined whenever the correlation is greater than or equal to a given threshold. By setting this threshold, the average degree of the network may be regulated. The degree of a network node is the number of connections the node has to other nodes. So, the degree distribution is the probability distribution of all the degrees of the nodes in the network. The degree distributions at particular average degrees for both the Ising model at criticality and brain FMRI data display remarkable similarity (see Figure 9). The indistinguishability of a refined feature of network structure such as degree distribution between the Ising model at its critical temperature and the brain indicates that despite the simplicity of the Ising model and its complete lack of any neural details, the macroscopic, phenomenological behavior of the brain can still be replicated. This finding lends support to the idea that the brain operates in a critical regime where its microscopic details aren't relevant to the emergent macroscopic behavior and network dynamics.
+Additional work has been done in the field in an attempt to further bridge the gap between statistical physics and neuroscience. In particular, analogies have been drawn between Ising model dynamics and brain dynamics \cite{Fraiman2009a}. By transforming brain functional magnetic resonance imaging (fMRI) data and a 2D Ising model simulation into correlation networks, the two may be appropriately compared. A correlation network is here defined by linking sites with the strongest correlations. Correlations between lattice sites in the Ising model as well as sites from recorded brain data are computed, with links between sites defined whenever the correlation is greater than or equal to a given threshold. By setting this threshold, the average degree of the network may be regulated. The degree of a network node is the number of connections the node has to other nodes. So, the degree distribution is the probability distribution of all the degrees of the nodes in the network. The degree distributions at particular average degrees for both the Ising model at criticality and brain FMRI data display remarkable similarity (see Figure 9). The indistinguishability of a refined feature of network structure such as degree distribution between the Ising model at its critical temperature and the brain indicates that despite the simplicity of the Ising model and its complete lack of any neural details, the macroscopic, phenomenological behavior of the brain can still be replicated. This finding lends support to the idea that the brain operates in a critical regime where its microscopic details are not relevant to the emergent macroscopic behavior and network dynamics.
 
 \begin{figure}      
   \begin{center}    
  \includegraphics[width=.8\textwidth]{isinglikedynamicschialvo}    
-    \caption{\textbf{Ising-like dynamics of the brain.} Degree distributions from fMRI brain data (bottom) and Ising model (top) at temperatures corresponding to subcritical (T=2), critical (T=2.3), and supercritical (3). Black, red, and green curves correspond to average network degrees of 713, 127, and 26, respectively. \cite{Fraiman2009a}}   
+    \caption{\textbf{Ising-like dynamics of the brain.} Degree distributions from fMRI brain data (bottom) and Ising model (top) at temperatures corresponding to subcritical ($T=2$), critical ($T=2.3$), and supercritical ($T=3$). Black, red, and green curves correspond to average network degrees of 713, 127, and 26, respectively. \cite{Fraiman2009a}}   
    \label{Figure::Ising model and the brain at criticality}   
   \end{center}     
    \end{figure}
